--- a/services/frontend/src/css/style.css
+++ b/services/frontend/src/css/style.css
@@ -4,3 +4,17 @@
 .hr-type-2{
     border-width: 1px;
 }
+.header{
+    height: 50px;
+    background-color: aqua;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.header div{
+    display: inline;
+}
+.header .userinfo{
+
+    float: right;
+}
